# TrafficSim

./: CMakeLists.txt
res/: Chandler.json  Frisco.json  HoverS99.json  KPHX.csv  KPHX.json
src/: Aircraft.h  CSVReader.h  CurvePath.cpp  CurvePath.h  Graph.cpp  Graph.h  MapUtil.cpp  MapUtil.h  SharedMemoryHandle.cpp  SharedMemoryHandle.h  Traffic.h  TrafficDataReader.cpp  TrafficDataReader.h  TrafficDataWriter.cpp  TrafficDataWriter.h  TrafficMgr.h  TrafficSimulate.cpp  TrafficSimulate.h  main.cpp
